
TODO:
	LanBridgeServer: DNS map



2010.11.16	K.L.	<xxxK.L.xxx@gmail.com>

	+	include/Log.h: created.


2010.11.15	K.L.	<xxxK.L.xxx@gmail.com>

	+	Catcher: 'new connection avoid' mark added.

	+	VideoBridge: 16bit color encode/decode implemented.


2010.11.12	K.L.	<xxxK.L.xxx@gmail.com>

	+	VideoBridge: 16it color format added.

	+	VideoBridge/VideoBridge::Catcher: video capture implemented.


2010.11.11	K.L.	<xxxK.L.xxx@gmail.com>

	+	LanBridgeMessenger: project setup.

	+	VideoBridge: project setup.


2010.11.10	K.L.	<xxxK.L.xxx@gmail.com>

	+	UdpBridge: project setup.
	+	FileSystemBridge: project setup.


2010.11.6	K.L.	<xxxK.L.xxx@gmail.com>

	>	LanBridgeServer: ipv6 support added.


2010.11.5	K.L.	<xxxK.L.xxx@gmail.com>

	>	LanBridgeServer: fixed bug of sock corruption in thread 'session_output'.

	*	bootstrapper.lua:
			while true do
				local s, e = pcall(os.execute, "LanBridgeServer --station=X:\\bridge")
				if not s then
					print("Bootstrpper: error: " .. e)
				end

				print"\n *** restart... ***"
			end

	+	Changlog.txt: created.


------------------------------------------------------- LanBridge ChangeLog -------------------------------------------------------